spring security login handle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# Database Connection
+ 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dbgeneration
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+ 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+
+logging.level.org.hibernate = ERROR
+
+
+spring.session.jdbc.initialize-schema=always
+security.basic.enabled=false
 
