--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,13 @@ spring.datasource.password=123456
 # ===============================
  
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
 
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .html
+spring.messages.basename=validation
 
-
-logging.level.org.hibernate = ERROR
-
-
-spring.session.jdbc.initialize-schema=always
-security.basic.enabled=false
 
