--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,7 @@ spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .html
 spring.messages.basename=validation
 
-
+logging.level.root=INFO
+logging.file.name=logs/mylog.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss:SSS} %-5p %c{1}:%L - %m%n
+logging.file.max-size=5MB
