--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Connection
  
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dbgeneration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -15,9 +15,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 
-spring.mvc.view.prefix: /
-spring.mvc.view.suffix: .html
-spring.messages.basename=validation
 
 logging.level.root=INFO
 logging.file.name=logs/mylog.log
