--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Starter for using Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
