--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database Connection
  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# spring.datasource.url=jdbc:mysql://localhost:3306/dbgeneration?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/dbgeneration?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/sakila?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbgeneration?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 
